crates/credential/tests/probes/cred_attr_pending_without_continue_resolve.stderr
error: `type Pending` is only valid alongside a `fn continue_resolve` — remove it or add the interactive continuation method
  --> tests/probes/cred_attr_pending_without_continue_resolve.rs:23:5
   |
23 |     type Pending = SecretToken;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
